1
../scratch/migration.cc: In function ‘int getNodeId(ns3::Ptr<ns3::Node>, std::string)’:
../scratch/migration.cc:293:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘uint32_t’ {aka ‘unsigned int’} [-Wsign-compare]
  293 |     for (int i = 0; i < tmpNodesContainer.GetN(); ++i){
      |                     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~
../scratch/migration.cc: In function ‘void migrate(ns3::Ptr<ns3::Node>, ns3::Ptr<ns3::Node>, ns3::Ipv4Address, ns3::Ipv4Address)’:
../scratch/migration.cc:315:17: error: return-statement with a value, in function returning ‘void’ [-fpermissive]
  315 |         return -1;
      |                 ^
../scratch/migration.cc: In function ‘int getNodeId(ns3::Ptr<ns3::Node>, std::string)’:
../scratch/migration.cc:298:1: warning: control reaches end of non-void function [-Wreturn-type]
  298 | }
      | ^

Build failed
 -> task in 'migration' failed with exit status 1 (run with -v to display more information)
